internal/compiler/testdata/fuzz/crashers/c7e67baebf3f7e6aa2d30491d55646907bb59405.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x1141232]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000a2ec0, 0x0, 0xc0000719d8, 0x104804f, 0x3, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:241 +0x52
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000a2ec0, 0xc00006adc0, 0x9, 0x0, 0x100000000000002, 0xc0000a65cb)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b5
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCoreValues(0xc0000a2ec0, 0xc000068500, 0x100b456, 0xc0000a8980, 0x40, 0x38)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:125 +0x11b
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCore(0xc0000a2ec0, 0xc000068500, 0x0, 0xc000071c60, 0x1010f93, 0xc0000a8980)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:115 +0xb1
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelect(0xc0000a2ec0, 0xc000066280, 0x0, 0x2, 0xc0000a65d7, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:70 +0xb6
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc0000a2ec0, 0xc000099800, 0x0, 0x2, 0xc0000a65d7, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:54 +0x7e
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc0000a2ec0, 0xc000099800, 0x0, 0x0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:34 +0x54
github.com/tomarrell/lbadd/internal/compiler.Fuzz(0x28e4d000, 0x9, 0x9, 0x3)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler_fuzzy.go:38 +0x3a4
go-fuzz-dep.Main(0xc000071f70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/compiler/go.fuzz.main/main.go:15 +0x52
exit status 2